# novel

./: .env.example  .gitignore  README.md  autostart.vbs  benchmark.js  benchmark_results.tsv  docker-compose.yml  package-lock.json  program.md  run_hidden.vbs  start.bat  start_silent.bat  stop.bat
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/migrations/: 001_init_sqlite.sql
tauri-app/src-tauri/prompts/: bible_generation.md  canon_extractor.md  character_reviewer.md  continuity_reviewer.md  draft_writer.md  pacing_reviewer.md  plot_logic_reviewer.md  publication_reviewer.md  review_agents.md  review_arbiter.md  revision_writer.md  safety_reviewer.md  style_reviewer.md  weekly_planner.md
tauri-app/src-tauri/src/: lib.rs
tauri-app/src-tauri/src/ai/: anthropic.rs  client.rs  deepseek.rs  factory.rs  gemini.rs  mod.rs  openai.rs  openai_compat.rs  types.rs  (+1 more)
tauri-app/src-tauri/tests/: benchmark.rs  canon_consistency_tests.rs  command_locality_tests.rs  context_activation_tests.rs  context_compression_tests.rs  core_writing_loop_tests.rs  db_tests.rs  director_mode_tests.rs  draft_alternatives_tests.rs  extension_host_tests.rs  feedback_decision_tests.rs  generation_job_observability_tests.rs  graph_rag_tests.rs  hard_fact_ledger_tests.rs  import_export_tests.rs  integration_test.rs  knowledge_graph_tests.rs  learning_intake_tests.rs  memory_banks_tests.rs  operator_recipes_tests.rs  pet_window_visibility_tests.rs  project_bootstrap_tests.rs  prompt_runtime_tests.rs  provider_capability_tests.rs  publication_queue_tests.rs  quality_summary_tests.rs  rag_explainability_tests.rs  run_artifacts_tests.rs  style_asset_tests.rs
(+281 files in other folders)
